# bk-monitor

./: .gitignore  .gitmodules  .gtmproject.yaml  .pre-commit-config.yaml  Dockerfile.monitor-dev  Dockerfile.monitor.dev  LICENSE.txt  README.md  README_EN.md  SECURITY_TEST_REPORT.md  clean_custom_ts_field_duplicates.py  create_test_data.py  migrate_dataid_to_v4.py  package-lock.json  package.json  pnpm-lock.yaml  pr8946.diff  pyproject.toml  test.py
bk-monitor-base/: pyproject.toml
bkmonitor/: .coveragerc  .dockerignore  .env  .env.test  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylint.conf  .pytest_local.sh  .pytest_web.sh  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  Procfile  README.md  bk-monitor-base-config.example.yaml  gunicorn_config.py  ignorefile  local_settings.py  manage.py  monkey.py  on_migrate  pyproject.toml  pytest.ini  requirements.txt  requirements_aidev.txt  requirements_dev.txt  requirements_test.txt  settings.py  test_migration_in_shell.py  ty.toml  urls.py  version.yaml  wsgi.py
bkmonitor/.devcontainer/: Dockerfile  create_venv.sh  devcontainer.json  docker-compose.yaml
bkmonitor/.github/: copilot-instructions.md
bkmonitor/.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  support.md
bkmonitor/.github/workflows/: pytest.yml
bkmonitor/ai_agent/: resources.py  urls.py
bkmonitor/ai_agent/views/: assistant.py
bkmonitor/ai_agents/: agent_factory.py  apps.py  urls.py  utils.py  views.py
bkmonitor/ai_agents/migrations/: 0001_initial.py
bkmonitor/ai_agents/models/: __init__.py  agent_config.py  ai_agent.py
bkmonitor/ai_agents/resources/: resources.py
bkmonitor/ai_agents/services/: agent_instance.py  api_client.py  callback.py  command_handler.py  metrics_reporter.py
bkmonitor/ai_agents/tests/: test_agent_config.py
bkmonitor/ai_whale/: __init__.py  apps.py  local_command_handlers.py  urls.py  utils.py  views.py
bkmonitor/ai_whale/resources/: resources.py
bkmonitor/ai_whale/tests/: test_agent_config.py
bkmonitor/alarm_backends/: README.md  __init__.py  apps.py  constants.py
bkmonitor/alarm_backends/cluster/: __init__.py  define.py
bkmonitor/alarm_backends/core/: cluster.py  i18n.py
bkmonitor/alarm_backends/integration_tests/: access_event_generator.py
bkmonitor/alarm_backends/management/: hashring.py  utils.py
bkmonitor/alarm_backends/service/: README.md  __init__.py  tools.py
bkmonitor/alarm_backends/templatetags/: math_filters.py  port_range.py  unit.py
bkmonitor/alarm_backends/tests/: conftest.py
bkmonitor/api/aidev/: default.py
bkmonitor/api/aiops_sdk/: default.py
bkmonitor/api/apm_api/: default.py
bkmonitor/api/bcs/: default.py  (+1 more)
bkmonitor/apm/: __init__.py  admin.py  apps.py  constants.py  resources.py  serializer.py  serializers.py  types.py  urls.py  views.py
bkmonitor/apm_ebpf/: admin.py  apps.py  constants.py  default.py  resource.py  urls.py  utils.py  views.py
bkmonitor/bk_dataview/: __init__.py  api.py  apps.py  authentication.py  client.py  models.py  permissions.py  provisioning.py  router.py  settings.py  urls.py  util.py  utils.py  views.py
bkmonitor/bkm_ipchooser/: api.py  authentication.py  config.py  constants.py  mock_data.py  models.py  urls.py  views.py
bkmonitor/bkm_space/: api.py  define.py  errors.py  serializers.py  utils.py  validate.py
bkmonitor/bkmonitor/: __init__.py  admin.py  app.py  apps.py  db_routers.py  log_trace.py  migrate.py  profiling.py
bkmonitor/calendars/: README.md  admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
bkmonitor/config/: __init__.py  celery.py  default.py  dev.py  prod.py  stag.py
bkmonitor/constants/: action.py  aiops.py  alert.py  apm.py  bk_collector.py  cmdb.py  common.py  data_source.py  dataflow.py  elasticsearch.py  email_subscription.py  event.py  incident.py  issue.py  mcp.py  new_report.py  query_template.py  report.py  result_table.py  rum.py  shield.py  strategy.py  system_event.py  view.py
bkmonitor/core/: README.md  testing.py
bkmonitor/data_migration/: __init__.py  cli.py  config.py
bkmonitor/docs/: CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md
bkmonitor/kernel_api/: __init__.py  adapters.py  apps.py  dbroutors.py  exceptions.py  throttling.py  urls.py
bkmonitor/local_app/: apps.py  urls.py  views.py
bkmonitor/locale/: babel.cfg  babeljs.cfg
bkmonitor/metadata/: README.md  __init__.py  admin.py  apps.py  config.py  db_router.py  health_check.py  migration_util.py  signals.py  views.py
bkmonitor/patches/: bk_monitor_base.py  bkoauth.py  furl.py  json.py  re.py  shutil.py
bkmonitor/query_api/: README.md  __init__.py  apps.py  exceptions.py  resources.py
bkmonitor/rum/: admin.py  apps.py  constants.py  resources.py  urls.py  views.py
bkmonitor/scripts/: add_py_license_header.py  check_commit_message.py  cleanup_data_id.py  convert_yaml.py  influxdb_checker.py  query_unused_bk_data_id_by_kafka.py  retry_action_script.py  test_chrome.py  udp_echo_server.py
bkmonitor/spec/: README.md
bkmonitor/support-files/: qcloud-exporter-template.yaml  qcloud-exporter-template.yaml.jinja2  supervisord.conf
bkmonitor/templates/: 401.html  404.html  500.html
bkmonitor/tests/: conftest.py  test_alert_drilling.py  test_constants_mcp.py  test_itsm_action_plugin_config.py  test_mcp_permission_convergence.py  test_mcp_trace_context.py  test_metric_id_utils.py  test_scene_log_search_resource.py  test_template_security.py  test_tools.py
bkmonitor/tests_hack/: conftest.py
bkmonitor/version/: app.yml  pack.sh  project.yml
bkmonitor/webpack/: .browserslistrc  .cursorignore  .dockerignore  .editorconfig  .gitignore  .lintstagedrc.json  .npmrc  .prettierrc.cjs  Dockerfile  Makefile  README.md  babel.config.js  biome.json  docker_build.sh  eslint.config.js  eslint.config.mjs  index.ejs  index.html  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  prettier.config.js  stylelint.config.js  stylelint.config.mjs  tailwind.config.js  taze.config.ts  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  webpack.config.js
(+11283 files in other folders)
