[project]
name = "bk-monitor-base"
version = "0.0.1"
description = "This is the base project for the BK Monitor project."
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bk_monitor_base"]

# ruff
[tool.ruff]
src = ["src"]
line-length = 120
exclude = [
    ".git",
    "venv",
    ".venv",
    ".pytype",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
]
[tool.ruff.lint]
extend-ignore = ["E402"]
